src/test/resources/projects/negative/unsupported-socket/src/main/java/com/acme/Main.java
package com.acme;

public final class Main {
    private Main() {
    }

    public static void main(final String[] args) throws Exception {
        new java.net.Socket();
    }
}
